<resources>
    <string name="app_name">UrbanSOS</string>
    <string name="app_name_login">Log In UrbanSOS</string>
    <string name="app_name_signup">Sign Up UrbanSOS</string>
    <string name="app_name_recoverpassword">Recover Password</string>
    <string name="username">CPF or Email:</string>
    <string name="password">Password:</string>
    <string name="login">Log In</string>
    <string name="signup">Sing Up</string>
    <string name="forgotpassword">Forgot you password?</string>
    <string name="recover">Recover</string>
    <string name="rememberme">Remember me</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="cpf">CPF:</string>
    <string name="passwordconfirm">Confirm password:</string>
    <string name="home">Home</string>
    <string name="myreports">My Reports</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="notification">Notifications</string>
    <string name="theme">Theme</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences_file_auth">br.com.urbansos.PREFERENCES_FILE_AUTH</string>
    <string name="preferences_file_photo">br.com.urbansos.PREFERENCES_FILE_PHOTO</string>
    <string name="preferences_file_location">br.com.urbansos.PREFERENCES_FILE_LOCATION</string>
    <string name="preferences_file_notification">br.com.urbansos.PREFERENCES_FILE_NOTIFICATION</string>
    <string name="report_title">Title:</string>
    <string name="report_description">Description:</string>
    <string name="report_submit">Send report</string>
    <string name="select_report_level">Report level</string>
    <string name="warning">Warning!</string>
    <string name="noreports">No reports available</string>
    <string name="nonotifications">No notifications</string>
    <string name="ok">Ok, I got it</string>
    <string name="gotosettings">Go to settings</string>
    <string name="alert_location_msg">We request access to your location as this information is necessary to accurately send the location of your report to those responsible. \n\nClick the OK button after granting the permissions.</string>
    <string name="alert_camera_msg">We request access to the camera as it is used to take photos of your reports. \n\nClick the OK button after granting the permissions.</string>
    <string name="alert_connection_msg">The application requires an internet connection to consult and send information. \n\nClick OK when connected to the internet.</string>
</resources>