<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="153dp"
        android:layout_height="167dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_urbansos" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_login"
        android:textSize="34sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="2"
            android:maxLength="255"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="password_toggle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/ckeckbox_rememberme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rememberme" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/btn_login_1"
        android:onClick="authLogin"
        android:layout_width="350px"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textSize="18dp"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressindicator_login"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="-55dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_singup_2"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:onClick="screenSignup"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/signup"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_forgotpassword"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:onClick="screenRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/forgotpassword"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>