<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="153dp"
        android:layout_height="167dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_urbansos" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_recoverpassword"
        android:padding="0dp"
        android:textSize="34sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/recover"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
    </LinearLayout>

    <Button
        android:id="@+id/btn_singup_3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:onClick="screenSignup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:minWidth="0dp"
        android:text="@string/signup"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login_3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:onClick="screenLogin"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="-60dp"
        android:minWidth="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/login"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>