<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="153dp"
        android:layout_height="167dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_urbansos" />

    <TextView
        android:id="@+id/title_alert"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"/>

    <TextView
        android:id="@+id/msg_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_connection_msg"
        android:layout_marginTop="20dp"
        android:justificationMode="inter_word"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
    </LinearLayout>

    <Button
        android:id="@+id/btn_settings"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:onClick="openWifiSettings"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:text="@string/gotosettings"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:minWidth="0dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reload"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:onClick="reloadApp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="-60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ok"
        android:textSize="18dp"
        android:textStyle="bold"/>

</LinearLayout>